--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
+    "lint": "oxlint",
+    "lint:fix": "oxlint --fix",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
@@ -30,6 +32,7 @@
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "drizzle-kit": "^0.31.8",
+    "oxlint": "^1.42.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
