--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "typecheck": "react-router typegen && tsc",
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
+    "fmt": "oxfmt",
+    "fmt:check": "oxfmt --check",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
@@ -32,6 +34,7 @@
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "drizzle-kit": "^0.31.8",
+    "oxfmt": "^0.27.0",
     "oxlint": "^1.42.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
